# homeland

./: Cargo.toml  Procfile  Rocket.toml  rust-toolchain
migrations/2022-03-17-064050_create_main/: up.sql
migrations/2022-04-13-142452_create_projects/: up.sql
public/: index.css  index.html
public/css/: 183.f40e6b0e.css  461.415daf40.css  512.025c23ad.css  927.ea86048a.css  953.e77e9a59.css  975.e90cd029.css  992.b1cae827.css  about.1a639aa9.css  about.4aa54cbd.css  app.6845f6f2.css  app.bfdda2f3.css
public/js/: 183.0a8040eb.js  183.0a8040eb.js.map  183.43aced72.js  183.43aced72.js.map  401.93ecfc8f.js  401.93ecfc8f.js.map  461.0caca40b.js  461.0caca40b.js.map  512.e897dfe0.js  512.e897dfe0.js.map  927.dc2fa1b2.js  927.dc2fa1b2.js.map  953.25add48a.js  953.25add48a.js.map  975.095242fd.js  975.095242fd.js.map  992.f5554f52.js  992.f5554f52.js.map  about.41e38f70.js  about.41e38f70.js.map  about.569946f9.js  about.569946f9.js.map  about.8dc011c8.js  about.8dc011c8.js.map  about.dc0a1b93.js  about.dc0a1b93.js.map  about.fbfdd8a9.js  about.fbfdd8a9.js.map  app.0d712fe1.js  app.0d712fe1.js.map  app.1a63e4d8.js  app.1a63e4d8.js.map  app.37419a28.js  app.37419a28.js.map  app.8eb7015d.js  app.8eb7015d.js.map  app.af9e9f58.js  app.af9e9f58.js.map  app.b81c87f6.js  app.b81c87f6.js.map  (+14 more)
public/src/: contents.js
public/src/res/content/: missingGem.png.proxy.js  thinkShesNeat.jpg.proxy.js
public/wasm/: game.html  game_old.html  index-3df23a747dca2db5.js  index-50ef27c840ae23a1.js  index-cf136f05899ad0db.js
src/: auth.rs  db.rs  main.rs  model.rs  schema.rs
