[package]
name = "blogomatic"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
dotenv = "0.15.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve", "json"]

[dependencies.diesel]
version= "1.4.8"
default-features= false
features = ["postgres"]
